--- a/credentials.yml
+++ b/credentials.yml
@@ -1,10 +1,6 @@
-version: 2
-updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "monthly"
-  - package-ecosystem: "nuget"
-    directory: "/code/"
-    schedule:
-      interval: "weekly"
+default:
+  aws_access_key_id: AKIAQYLPMN5HNM4OZ56B
+  aws_secret_access_key: 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
+  mongodb: mongodb+srv://svc-admin:kLeioeBne5lsopPf@mergington-high.avocado.mongodb.net
+  output: json
+  region: us-east-2
